Added animated home hero component

--- a/fitness-tracker-frontend/projects/home-lib/src/lib/ui/home-hero/home-hero.html
+++ b/fitness-tracker-frontend/projects/home-lib/src/lib/ui/home-hero/home-hero.html
@@ -1,1 +1,101 @@
-<p>home-hero works!</p>
+<section class="animation-wrapper" #wrapper>
+    <h1 class="hero-slogan" #slogan>YOUR FITNESS EVOLUTION</h1>
+    <div class="dial-container" #dialContainer>
+        <!-- Animated Logo from assets/logo.svg with Pie Chart Effect (0-75%) -->
+        <svg class="dial-logo" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" #dialLogo>
+            <defs>
+                <!-- Circular clip path for pie chart effect -->
+                <clipPath id="pieClip">
+                    <path #clipPath fill="transparent" />
+                </clipPath>
+            </defs>
+
+            <!-- Actual logo from assets/logo.svg -->
+            <path #logoFill
+                d="M30 0C13.4315 0 0 13.4315 0 30C0 46.5685 13.4315 60 30 60V30H60C60 13.4315 46.5685 0 30 0Z"
+                fill="var(--fitness-primary)" clip-path="url(#pieClip)" />
+        </svg>
+
+        <!-- Buzzwords with descriptions -->
+        <div class="buzzword word-top" #wordTop>
+            <div class="buzzword-card widget-card">
+                <div class="widget-header">
+                    <span class="material-icons buzzword-icon">search</span>
+                    <div class="buzzword-content">
+                        <span class="buzzword-title">DISCOVER</span>
+                        <span class="buzzword-desc">Explore exercise library</span>
+                    </div>
+                </div>
+                <div class="widget-body">
+                    <div class="pill-tags">
+                        <span class="pill">Yoga</span>
+                        <span class="pill">HIIT</span>
+                        <span class="pill">Cardio</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="buzzword word-right" #wordRight>
+            <div class="buzzword-card widget-card">
+                <div class="widget-header">
+                    <span class="material-icons buzzword-icon">insights</span>
+                    <div class="buzzword-content">
+                        <span class="buzzword-title">ANALYZE</span>
+                        <span class="buzzword-desc">Visualize your gains</span>
+                    </div>
+                </div>
+                <div class="widget-body">
+                    <div class="chart-preview">
+                        <span class="chart-label">Weekly Trend: <strong>Up</strong></span>
+                        <svg viewBox="0 0 100 30" class="mini-chart">
+                            <path d="M0,25 C20,25 20,10 40,10 C60,10 60,20 80,5 L100,0" fill="none" stroke="var(--fitness-primary)"
+                                stroke-width="3" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="buzzword word-bottom" #wordBottom>
+            <div class="buzzword-card widget-card">
+                <div class="widget-header">
+                    <span class="material-icons buzzword-icon">fitness_center</span>
+                    <div class="buzzword-content">
+                        <span class="buzzword-title">TRAIN</span>
+                        <span class="buzzword-desc">Log your sessions</span>
+                    </div>
+                </div>
+                <div class="widget-body">
+                    <div class="progress-widget">
+                        <div class="progress-label">
+                            <span>Today's Goal</span>
+                            <strong>80%</strong>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="width: 80%"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="buzzword word-left" #wordLeft>
+            <div class="buzzword-card widget-card">
+                <div class="widget-header">
+                    <span class="material-icons buzzword-icon">calendar_today</span>
+                    <div class="buzzword-content">
+                        <span class="buzzword-title">PLAN</span>
+                        <span class="buzzword-desc">Design custom routines</span>
+                    </div>
+                </div>
+                <div class="widget-body">
+                    <div class="calendar-widget">
+                        <span class="material-icons calendar-icon">event</span>
+                        <div class="calendar-text">
+                            <span>Next Session:</span>
+                            <strong>Tomorrow</strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
