Fix session exercise count and update backend docs

--- a/fitness-tracker-frontend/projects/plans-lib/src/lib/ui/plan-card/plan-card.html
+++ b/fitness-tracker-frontend/projects/plans-lib/src/lib/ui/plan-card/plan-card.html
@@ -12,7 +12,7 @@
 
                 <div class="stat-chip">
                     <span class="label">Sessions</span>
-                    <span class="value">{{ plan().sessionsCount || 0 }}</span>
+                    <span class="value">{{ plan().sessions?.length || 0 }}</span>
                 </div>
             </div>
         </div>
