refactor(plans-lib): update plans components styling and simplify tests
- Improve plan-card.scss with hover effects and better spacing
- Refine plan-edit-dialog and plan-delete-dialog styling
- Simplify plan-edit-dialog.spec.ts test setup
- Update plan-form-dialog to use property instead of computed for isEditMode
- Remove redundant 'standalone: true' from components (default in Angular 19)
- Update plans-overview header title from 'Training Plans' to 'Plans'
- Code formatting improvements in plan-edit-dialog.ts

--- a/fitness-tracker-frontend/projects/plans-lib/src/lib/ui/plan-edit-dialog/plan-edit-dialog.html
+++ b/fitness-tracker-frontend/projects/plans-lib/src/lib/ui/plan-edit-dialog/plan-edit-dialog.html
@@ -85,8 +85,7 @@
   <mat-dialog-actions align="end" class="dialog-actions">
     <button mat-button class="cancel-btn" type="button" (click)="onCancel()">Cancel</button>
     <button mat-raised-button class="update-btn" type="submit" [disabled]="form.invalid || isSaving || !isDirty">
-      <mat-icon>save</mat-icon>
-      <span>Update</span>
+      Update
     </button>
   </mat-dialog-actions>
 </form>
