refactor(dialogs): simplify exercise and plan creation dialogs
- Updated titles in exercise and plan creation dialogs for clarity.
- Removed redundant orderID field from session creation form.
- Enhanced empty state message for sessions with no exercises added.
- Added new styles for improved visual presentation of empty exercises state.

--- a/fitness-tracker-frontend/projects/plans-lib/src/lib/ui/plan-form-dialog/plan-form-dialog.html
+++ b/fitness-tracker-frontend/projects/plans-lib/src/lib/ui/plan-form-dialog/plan-form-dialog.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ isEditMode ? 'Edit Training Plan' : 'Create Training Plan' }}</h2>
+<h2 mat-dialog-title>{{ isEditMode ? 'Edit Training Plan' : 'Create Plan' }}</h2>
 
 <mat-dialog-content>
     <p class="required-hint">* Required fields</p>
