--- a/fitness-tracker-frontend/projects/exercises-lib/src/lib/ui/exercise-form-dialog/exercise-form-dialog.html
+++ b/fitness-tracker-frontend/projects/exercises-lib/src/lib/ui/exercise-form-dialog/exercise-form-dialog.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Create New Exercise</h2>
+<h2 mat-dialog-title>Create Exercise</h2>
 <mat-dialog-content>
   <p class="required-hint">* Required fields</p>
   <form [formGroup]="form" class="exercise-form">
