--- a/fitness-tracker-frontend/projects/workouts-lib/src/lib/ui/workout-start-dialog/workout-start-dialog.html
+++ b/fitness-tracker-frontend/projects/workouts-lib/src/lib/ui/workout-start-dialog/workout-start-dialog.html
@@ -7,6 +7,6 @@
   <button mat-button type="button" (click)="onCancel()">Cancel</button>
   <button mat-raised-button type="button" class="create-btn" (click)="onCreate()">
     <mat-icon>play_arrow</mat-icon>
-    Create
+    Start
   </button>
 </mat-dialog-actions>
