--- a/fitness-tracker-frontend/projects/workouts-lib/src/lib/ui/workout-delete-dialog/workout-delete-dialog.html
+++ b/fitness-tracker-frontend/projects/workouts-lib/src/lib/ui/workout-delete-dialog/workout-delete-dialog.html
@@ -1,16 +1,12 @@
-<h2 mat-dialog-title>Delete Session Log</h2>
-
+<h2 mat-dialog-title>Confirm Deletion</h2>
 <mat-dialog-content>
   <p>Are you sure you want to delete the workout log for <strong>{{ data.sessionName }}</strong>?</p>
-  <p class="warning-text">This action cannot be undone.</p>
+  <p class="warning">This action cannot be undone.</p>
 </mat-dialog-content>
-
 <mat-dialog-actions align="end">
-  <button mat-button class="cancel-btn" (click)="onCancel()">Cancel</button>
-  <button mat-raised-button class="delete-btn" (click)="onConfirm()">
+  <button mat-button type="button" (click)="onCancel()">Cancel</button>
+  <button mat-raised-button type="button" class="delete-btn" (click)="onConfirm()">
     <mat-icon>delete</mat-icon>
     Delete
   </button>
 </mat-dialog-actions>
-
-
