--- a/fitness-tracker-frontend/projects/workouts-lib/src/lib/ui/workout-card/workout-card.html
+++ b/fitness-tracker-frontend/projects/workouts-lib/src/lib/ui/workout-card/workout-card.html
@@ -35,14 +35,17 @@
 
     <div class="side-section">
       <div class="stats-section">
-        <span class="detail-chip">
+        <div class="plan-pill" title="Linked training plan">
           <mat-icon>calendar_today</mat-icon>
-          {{ workout().sessionPlanName }}
-        </span>
-        <span class="detail-chip">
+          <span>{{ workout().sessionPlanName }}</span>
+        </div>
+        <div class="stat-chip">
           <mat-icon>fitness_center</mat-icon>
-          {{ workout().executionLogCount ?? 0 }} exercises
-        </span>
+          <div class="stat-text">
+            <span class="label">Exercises</span>
+            <span class="value">{{ workout().executionLogCount ?? 0 }}</span>
+          </div>
+        </div>
       </div>
 
       <div class="actions-section">
