feat: introduce responsive sizing for header elements and add an animated scroll indicator to the home hero section.

--- a/fitness-tracker-frontend/projects/home-lib/src/lib/ui/home-hero/home-hero.html
+++ b/fitness-tracker-frontend/projects/home-lib/src/lib/ui/home-hero/home-hero.html
@@ -1,5 +1,11 @@
 <section class="animation-wrapper" #wrapper>
     <h1 class="hero-slogan" #slogan>YOUR FITNESS EVOLUTION</h1>
+    <div class="scroll-indicator" #scrollIndicator>
+        <div class="mouse">
+            <div class="wheel"></div>
+        </div>
+        <div class="arrow"></div>
+    </div>
     <div class="dial-container" #dialContainer>
         <svg class="dial-logo" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" #dialLogo>
             <defs>
