--- a/fitness-tracker-frontend/projects/exercises-lib/src/lib/ui/exercise-card/exercise-card.html
+++ b/fitness-tracker-frontend/projects/exercises-lib/src/lib/ui/exercise-card/exercise-card.html
@@ -17,10 +17,12 @@
             </div>
           </div>
         </div>
+        @if (authService.isLoggedIn()) {
         <button mat-raised-button class="delete-btn" (click)="onDelete($event)">
           <mat-icon>delete</mat-icon>
           Delete
         </button>
+        }
       </div>
     </div>
   </div>
